--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,79 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.votreorg.cinema</groupId>
-    <artifactId>cinema-rest-microservices</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+  <groupId>com.votreorg.cinema</groupId>
+  <artifactId>cinema-rest-microservices</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-    <modules>
-        <module>auth-service</module>
-        <module>cinema-service</module>
-        <module>movie-service</module>
-        <module>schedule-service</module>
-        <module>public-service</module>
-        <module>api-gateway</module>
-    </modules>
+  <!-- 1️⃣  Modules déjà créés  -->
+  <modules>
+    <module>auth-service</module>
+    <!-- Ajoute d’autres modules quand ils existeront
+    <module>cinema-service</module>
+    <module>movie-service</module>
+    <module>schedule-service</module>
+    <module>public-service</module>
+    <module>api-gateway</module>
+    -->
+  </modules>
 
-    <dependencyManagement>
-        <dependencies>
-            <!-- versions centralisées pour Jersey, Jackson, etc. -->
-        </dependencies>
-    </dependencyManagement>
+  <!-- 2️⃣  Versions centralisées : tous les enfants hériteront -->
+  <dependencyManagement>
+    <dependencies>
+      <!-- Jersey (JAX-RS) -->
+      <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-server</artifactId>
+        <version>2.41</version>            <!-- ou 3.1.10 si Jakarta / Tomcat 10 -->
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-servlet</artifactId>
+        <version>${project.parent.version}</version>
+      </dependency>
+      <!-- JSON (Jackson) -->
+      <dependency>
+        <groupId>org.glassfish.jersey.media</groupId>
+        <artifactId>jersey-media-json-jackson</artifactId>
+        <version>2.41</version>
+      </dependency>
+      <!-- Tests -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <!-- configuration du maven-war-plugin, compiler-plugin, etc. -->
-            </plugins>
-        </pluginManagement>
-    </build>
+  <!-- 3️⃣  Plugins communs -->
+  <build>
+    <pluginManagement>
+      <plugins>
+        <!-- Compiler Java 11 -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.11.0</version>
+          <configuration>
+            <source>11</source>
+            <target>11</target>
+          </configuration>
+        </plugin>
+
+        <!-- Packaging WAR -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.4.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
