--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -37,6 +37,20 @@
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
     </dependency>
+    <!-- → pour appeler les autres micro-services en REST -->
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+    </dependency>
+    <!-- → pour supporter les filtres JAX-RS (Request/ResponseFilter) -->
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>api-gateway</finalName>
