--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
+version: "3.9"
+
 services:
+    # --- MySQL central (un conteneur, 4 schémas) ---
+  mysql:
+      image: mysql:8.4
+      container_name: mysql
+      environment:
+        MYSQL_ROOT_PASSWORD: root
+      ports: [ "3306:3306" ]
+      volumes:
+        # tous les scripts *.sql placés ici seront exécutés au 1er démarrage
+        - ./db/init:/docker-entrypoint-initdb.d
+
   auth:
     build:
       context: .                 # ← racine du repo
@@ -34,3 +47,4 @@ services:
       context: .
       dockerfile: api-gateway/Dockerfile
     ports: ["8095:8095"]
+    depends_on: [ auth, cinema, movie, schedule, public ]
