--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -50,6 +50,29 @@
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-json-jackson</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.5</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>0.11.5</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.11.5</version>
+    <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.15.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -74,7 +97,7 @@
         <version>2.2</version>
         <configuration>
           <path>/cinema-service</path>   <!-- adapte au module -->
-          <port>8096</port>              <!-- change le port -->
+          <port>8091</port>              <!-- change le port -->
         </configuration>
       </plugin>
     </plugins>
